# vision

p1/: Makefile  color_spaces  main.cpp
p2/: Makefile  main.cpp  transforms
p3/: Makefile  enhance  main.cpp
p4/: Makefile  checkers  main.cpp
p5/: Makefile  main.cpp  skeleton
p6/: CMakeLists.txt  filter.cpp  main.cpp  view3D.cpp
pEXAMEN/p4/: checkers  main.cpp
pEXAMEN/p6/: CMakeLists.txt  main.cpp
